@@ -1,3 +1,5 @@
+Tue Apr 28 19:56:46 MET DST 1998 hannes
+  * ipassign.cc: fixed assignment of resolution to list: need ipMoveId
 1998-04-28  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
 
 	* kstd2.cc (redHomog): Some more ouput for KDEBUG && TEST_OPT_DEBUG
